# file_sync_program

./: CMakeLists.txt  README.md  thread_func.h
include/: compress_func.h  file_func.h  hash_table_func.h  serialize_func.h  socket_func.h  thread_func.h  uthash.h
shared_dir/: 4.css  sync_list.txt  sync_server.txt
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.c
src/func_lib/: CMakeLists.txt  compress_func.c  file_func.c  hash_table_func.c  serialize_func.c  socket_func.c  thread_func.c
src/server/: CMakeLists.txt  server.c
test/: CMakeLists.txt  test_main.cpp
test/include/: compress_test.h  file_test.h  hash_test.h  serialize_test.h
test/test_lists/: compress_test.cpp  file_test.cpp  hash_test.cpp  serialize_test.cpp
